--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
+/* Universal selector, Removes padding and margin from all elements  */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Body styles  */
+
 body {
     background-color: #d9dcd6;
 }
+
+/* header Section */
 
 .header {
     padding: 20px;
@@ -24,7 +30,9 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* Navbar section  */
+
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,14 +40,16 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+/* Global selectors */
 
 a {
     color: #ffffff;
@@ -50,6 +60,19 @@ p {
     font-size: 16px;
 }
 
+aside {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+/* Hero section  */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -58,6 +81,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* floats  */
 
 .float-left {
     float: left;
@@ -69,41 +94,15 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* Main page styles  */
+
+.content-section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefits-1 {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-
-.benefits-1 h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefits-1 img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.content-1 {
+.content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -112,14 +111,35 @@ p {
     color: #ffffff;
 }
 
-.content-1 img {
+.content img {
     max-height: 200px;
 }
 
-.content-1 h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* Aside section benefits  */
+
+.benefit {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+
+.benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* footer section styles  */
 
 .footer {
     padding: 30px;
